--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
     "[python]": {
-        "editor.defaultFormatter": "ms-python.python"
+        "editor.defaultFormatter": "ms-python.autopep8",
     },
-    "python.formatting.provider": "none",
+    "python.formatting.provider": "ms-python.autopep8",
     "python.testing.pytestArgs": [
         "Airline"
     ],
